--- a/provider/data-ephemeral-provider/pom.xml
+++ b/provider/data-ephemeral-provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.74.0-SNAPSHOT</version>
+        <version>1.74.0</version>
     </parent>
 
     <artifactId>data-ephemeral-provider</artifactId>
