Additional concrete roles

--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -88,6 +88,8 @@
 									<artifactId>
 										tinkar-test-data-snomed-us-20230901</artifactId>
 									<version>2024.09.20</version>
+<!--	<artifactId>tinkar-test-data-snomed-intl-20241001-kec</artifactId>-->
+<!--	<version>2024.10.01</version>-->
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
