--- a/provider/entity-provider/pom.xml
+++ b/provider/entity-provider/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>common</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>eclipse-collections</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+        </dependency>
      </dependencies>
 
     <build>
