--- a/provider/search-provider/pom.xml
+++ b/provider/search-provider/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>lucene-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-suggest</artifactId>
+        </dependency>
      </dependencies>
 
     <build>
