--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -69,6 +69,13 @@
 									<version>${snomed-test-data.version}</version>
 									<type>zip</type>
 								</artifactItem>
+								<artifactItem>
+									<groupId>${snomed-test-data.groupid}</groupId>
+									<artifactId>
+										snomed-test-data-intl-20241001</artifactId>
+									<version>${snomed-test-data.version}</version>
+									<type>zip</type>
+								</artifactItem>
 							</artifactItems>
 							<outputDirectory>
 								${project.build.directory}/data</outputDirectory>
@@ -90,6 +97,13 @@
 									<version>2024.09.20</version>
 <!--	<artifactId>tinkar-test-data-snomed-intl-20241001-kec</artifactId>-->
 <!--	<version>2024.10.01</version>-->
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										tinkar-test-data-snomed-intl-20241001</artifactId>
+									<version>2024.10.18</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
