--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -40,7 +40,7 @@
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed</artifactId>
 		</dependency>
-<!--		temp for test-->
+		<!--		temp for test-->
 		<dependency>
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-owl</artifactId>
@@ -65,7 +65,7 @@
 								<artifactItem>
 									<groupId>${snomed-test-data.groupid}</groupId>
 									<artifactId>
-										snomed-test-data-us-20230901</artifactId>
+										snomed-test-data-intl-20240701</artifactId>
 									<version>${snomed-test-data.version}</version>
 									<type>zip</type>
 								</artifactItem>
@@ -73,6 +73,13 @@
 									<groupId>${snomed-test-data.groupid}</groupId>
 									<artifactId>
 										snomed-test-data-intl-20241001</artifactId>
+									<version>${snomed-test-data.version}</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${snomed-test-data.groupid}</groupId>
+									<artifactId>
+										snomed-test-data-us-20240901</artifactId>
 									<version>${snomed-test-data.version}</version>
 									<type>zip</type>
 								</artifactItem>
@@ -90,18 +97,25 @@
 						<configuration>
 							<skip>${skipITs}</skip>
 							<artifactItems>
-<!--								<artifactItem>-->
-<!--									<groupId>${reasoner-test-data.groupid}</groupId>-->
-<!--									<artifactId>-->
-<!--										tinkar-test-data-snomed-us-20230901</artifactId>-->
-<!--									<version>2024.09.20</version>-->
-<!--									<type>zip</type>-->
-<!--								</artifactItem>-->
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										tinkar-test-data-build-snomed-intl-20240701</artifactId>
+									<version>2024.11.23</version>
+									<type>zip</type>
+								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-intl-20241001</artifactId>
-									<version>2024.10.28</version>
+									<version>2024.11.23</version>
+									<type>zip</type>
+								</artifactItem>
+								<artifactItem>
+									<groupId>${reasoner-test-data.groupid}</groupId>
+									<artifactId>
+										tinkar-test-data-build-snomed-us-20240901</artifactId>
+									<version>2024.11.23</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
