Use OwlEl transformer

--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -46,6 +46,11 @@
 				<version>${ikm-reasoner.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>dev.ikm.elk</groupId>
+				<artifactId>elk-snomed-owl-el</artifactId>
+				<version>${ikm-reasoner.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>dev.ikm.hybrid-reasoner</groupId>
 				<artifactId>hybrid-reasoner-snomed</artifactId>
 				<version>${hybrid-reasoner.version}</version>
