Use data property set for concrete roles.
Chnages to LogicalAxiom... classes and data builder

--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-owl-el</artifactId>
-			<!-- TODO This should be test scoped, but the moduel system? -->
+			<!-- TODO This should be test scoped, but the module system? -->
 			<!-- <scope>test</scope> -->
 		</dependency>
 	</dependencies>
