--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -22,8 +22,8 @@
 
 	<properties>
 		<hybrid-reasoner.version>1.0.3</hybrid-reasoner.version>
-		<ikm-reasoner.version>0.36.0-SNAPSHOT</ikm-reasoner.version>
-		<owlapi.version>4.7.5</owlapi.version>
+		<ikm-reasoner.version>0.36.0</ikm-reasoner.version>
+		<owlapi.version>4.7.6</owlapi.version>
 		<reasoner-test-data.groupid>dev.ikm.reasoner-test-data</reasoner-test-data.groupid>
 		<skipITs>true</skipITs>
 		<snomed-test-data.groupid>dev.ikm.snomed</snomed-test-data.groupid>
