--- a/.github/workflows/post_build.yaml
+++ b/.github/workflows/post_build.yaml
@@ -37,3 +37,4 @@ jobs:
             gpg_key: ${{secrets.GPG_KEY}}
             gpg_passphrase: ${{secrets.GPG_PASSPHRASE}}
             sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
+            sonarcloud_tests: ${{ '' }}
