--- a/reasoner/reasoner-elk-owl/pom.xml
+++ b/reasoner/reasoner-elk-owl/pom.xml
@@ -44,6 +44,14 @@
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-owl</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>${tinkar-jpms-deps.groupId}</groupId>
+			<artifactId>eclipse-collections</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${tinkar-jpms-deps.groupId}</groupId>
+			<artifactId>eclipse-collections-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
