--- a/reasoner/reasoner-hybrid/pom.xml
+++ b/reasoner/reasoner-hybrid/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.80.0-SNAPSHOT</version>
+		<version>1.80.0-IKM-BIND-01-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-hybrid</artifactId>
