--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,10 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>${tinkar-jpms-deps.groupId}</groupId>
-            <artifactId>auto-service</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
@@ -30,6 +26,12 @@
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>activej-bytebuf</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>dev.ikm.jpms</groupId>
+                    <artifactId>auto-service</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
@@ -45,6 +47,6 @@
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
-        
+
     </dependencies>
 </project>
