Revert "removed auto service from the project"

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>auto-service</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
@@ -26,12 +30,6 @@
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>activej-bytebuf</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>dev.ikm.jpms</groupId>
-                    <artifactId>auto-service</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
@@ -47,6 +45,6 @@
             <groupId>${tinkar-jpms-deps.groupId}</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
-
+        
     </dependencies>
 </project>
