--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,6 @@
 
         <!-- JPMS Dependencies -->
         <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
-        <guava.version>33.3.0-jre-r3</guava.version>
 		<jpms-auto-service.version>1.0.1-r7</jpms-auto-service.version>
 		<jpms-record-builder-core.version>36-r7</jpms-record-builder-core.version>
 		<eclipse-collections.version>11.1.0-r13</eclipse-collections.version>
@@ -117,8 +116,9 @@
 		<jheaps.version>0.14-r6</jheaps.version>
 		<roaringbitmap.version>0.9.31-r8</roaringbitmap.version>
 
-		<ikm-reasoner.version>0.36.0</ikm-reasoner.version>
-		<owlapi.version>4.7.6</owlapi.version>
+		<hybrid-reasoner.version>1.0.7</hybrid-reasoner.version>
+		<ikm-reasoner.version>0.37.3</ikm-reasoner.version>
+		<owlapi.version>4.8.0</owlapi.version>
     </properties>
 
 	<!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
@@ -301,12 +301,6 @@
                 <groupId>${tinkar-jpms-deps.groupId}</groupId>
                 <artifactId>mvstore</artifactId>
                 <version>${mvstore.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>${tinkar-jpms-deps.groupId}</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
             </dependency>
 
 			<!-- Everything else -->
