--- a/provider/changeset-writer-provider/pom.xml
+++ b/provider/changeset-writer-provider/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.83.0-SNAPSHOT</version>
+        <version>1.83.0-AR-299_Java23-SNAPSHOT</version>
     </parent>
 
     <artifactId>changeset-writer-provider</artifactId>
