--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.56.0</version>
+        <version>1.57.0</version>
         <relativePath/>
     </parent>
 
@@ -70,14 +70,14 @@
         <activej-bytebuf.version>4.3-r10</activej-bytebuf.version>
         <activej-common.version>4.3-r8</activej-common.version>
         <asm.version>9.1</asm.version>
-        <jsonschema2pojo-core.version>1.2.1</jsonschema2pojo-core.version>
+        <jsonschema2pojo-core.version>1.2.2</jsonschema2pojo-core.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-text.version>1.12.0</commons-text.version>
         <commons-io.version>2.16.1</commons-io.version>
-        <caffeine.version>3.1.8</caffeine.version>
+        <caffeine.version>3.2.0</caffeine.version>
 
-        <jackson.version>2.17.0</jackson.version>
-        <jgrapht.version>1.5.0</jgrapht.version>
+        <jackson.version>2.18.2</jackson.version>
+        <jgrapht.version>1.5.2</jgrapht.version>
         <mockito.version>5.15.2</mockito.version>
         <mvstore.version>2.3.232-r1</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
@@ -87,7 +87,7 @@
         <lucene-highlighter.version>9.7.0</lucene-highlighter.version>
         <lucene-suggest.version>9.7.0</lucene-suggest.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j.version>2.0.13</slf4j.version>
+        <slf4j.version>2.0.16</slf4j.version>
         <log4j.version>3.0.0-alpha1</log4j.version>
         <testng.version>7.4.0</testng.version>
         <snomedct-data.version>2023.09.01</snomedct-data.version>
@@ -99,11 +99,11 @@
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
         <sonar.language>java</sonar.language>
         <susel.version>0.1.2</susel.version>
-        <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
+        <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
         <tinkar-schema.version>1.37.0</tinkar-schema.version>
         <tinkar-bindings.version>1.4.0</tinkar-bindings.version>
         <udaychandra-susel.version>0.1.2</udaychandra-susel.version>
-        <common-java5.version>3.0.0-M9</common-java5.version>
+        <common-java5.version>3.5.2</common-java5.version>
         <fasterxml-jackson-core.version>2.17.0</fasterxml-jackson-core.version>
         <activej-launchers.version>4.3.1</activej-launchers.version>
 
@@ -117,7 +117,7 @@
 		<roaringbitmap.version>0.9.31-r8</roaringbitmap.version>
 
 		<hybrid-reasoner.version>1.0.7</hybrid-reasoner.version>
-		<ikm-reasoner.version>0.37.3</ikm-reasoner.version>
+		<ikm-reasoner.version>0.37.4</ikm-reasoner.version>
 		<owlapi.version>4.8.0</owlapi.version>
     </properties>
 
