--- a/reasoner/reasoner-service/pom.xml
+++ b/reasoner/reasoner-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>reasoner</artifactId>
-		<version>1.84.0-SNAPSHOT</version>
+		<version>1.84.0-IKDT-845-use-new-schema-to-handle-big-decimal-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>reasoner-service</artifactId>
