--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.57.0</version>
+        <version>1.58.0</version>
         <relativePath/>
     </parent>
 
@@ -81,11 +81,11 @@
         <mockito.version>5.15.2</mockito.version>
         <mvstore.version>2.3.232-r1</mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
-        <lucene-core.version>9.7.0</lucene-core.version>
-        <lucene-queryparser.version>9.7.0</lucene-queryparser.version>
-        <lucene-queries.version>9.7.0</lucene-queries.version>
-        <lucene-highlighter.version>9.7.0</lucene-highlighter.version>
-        <lucene-suggest.version>9.7.0</lucene-suggest.version>
+        <lucene-core.version>9.12.1</lucene-core.version>
+        <lucene-queryparser.version>9.12.1</lucene-queryparser.version>
+        <lucene-queries.version>9.12.1</lucene-queries.version>
+        <lucene-highlighter.version>9.12.1</lucene-highlighter.version>
+        <lucene-suggest.version>9.12.1</lucene-suggest.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>2.0.16</slf4j.version>
         <log4j.version>3.0.0-alpha1</log4j.version>
@@ -405,6 +405,12 @@
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-suggest</artifactId>
                 <version>${lucene-suggest.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.lucene</groupId>
+                <artifactId>lucene-backward-codecs</artifactId>
+                <version>${lucene-core.version}</version>
             </dependency>
             
             <dependency>
