--- a/component/pom.xml
+++ b/component/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.85.0-IKM-PROXY-01-SNAPSHOT</version>
+        <version>1.85.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>component</artifactId>
