--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,12 @@
 
             <dependency>
                 <groupId>org.apache.lucene</groupId>
+                <artifactId>lucene-backward-codecs</artifactId>
+                <version>${lucene-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-suggest</artifactId>
                 <version>${lucene-suggest.version}</version>
             </dependency>
