Initial implementation of inferred write back IT

--- a/reasoner/reasoner-elk-snomed/pom.xml
+++ b/reasoner/reasoner-elk-snomed/pom.xml
@@ -10,6 +10,10 @@
 
 	<artifactId>reasoner-elk-snomed</artifactId>
 
+	<properties>
+		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
